# Data-Loss-Prevention

./: .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  DLP_HARDENING_ROADMAP.md  FINAL_COMPLETION_SUMMARY.txt  GITHUB_DEPLOYMENT_COMPLETE.md  HARDENING_SESSION_2_SUMMARY.md  LICENSE  MEMORY.md  Makefile  NODE_VERSION_FIX.md  PHASE_3_FEATURE_EXPANSION_COMPLETE.md  QUICKSTART.md  README.md  READY_TO_PUSH.md  docker-compose.deploy.yml  docker-compose.prod.yml  install_dlp_server.py  install_linux_agent.py  install_windows_agent.ps1  push_to_github.ps1
.claude/: settings.local.json
.development-docs/: AGENT_IMPLEMENTATION_COMPLETE.md  FILES_MODIFIED.md  FINAL_SESSION_REPORT.md  PROGRESS_LOG.md  PROGRESS_UPDATE_SESSION_2.md  PROGRESS_UPDATE_SESSION_3.md  PROGRESS_UPDATE_SESSION_4.md  SESSION_SUMMARY.md
agents/endpoint/windows/: Uninstall-CyberSentinelAgent.ps1  agent.cpp  ca.cer
dashboard/: Dockerfile  Dockerfile.prod
dashboard/src/components/auth/: LoginForm.tsx
dashboard/src/components/policies/: ClassificationPolicyForm.tsx  PolicyCreatorModal.tsx  PolicyTypeSelector.tsx
dashboard/src/lib/: api.ts  config.ts  rules-api.ts
dashboard/src/pages/: Events.tsx  Settings.tsx
dashboard/src/types/: policy.ts
dashboard/src/utils/: policyUtils.ts
server/: .bandit  .flake8  constraints.txt  pyproject.toml  requirements.txt
server/alembic/: env.py
server/app/: main.py
server/app/actions/: __init__.py  action_executor.py  action_types.py
server/app/api/v1/: __init__.py  agents.py  agents_new.py  analytics.py  auth.py  events.py  export.py  policies.py  siem.py
server/app/core/: config.py  observability.py  security.py  validation.py
server/app/integrations/: __init__.py
server/app/integrations/siem/: __init__.py  base.py  elk_connector.py  integration_service.py  splunk_connector.py
server/app/services/: __init__.py  analytics_service.py  export_service.py  reporting_service.py
server/app/tasks/: __init__.py  reporting_tasks.py
server/data/: default_rules.json
server/tests/: test_detection_classification.py  test_policy_engine.py
(+3 files in other folders)
